<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBack"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tabel8_alias"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="@id/backButton" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tabel8field1Judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabel8field1_alias"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/tabel8field1"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@string/tabel8field1_hint"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:paddingTop="21dp"
                android:paddingBottom="11dp" />

            <TextView
                android:id="@+id/tabel8field2Judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabel8field2_alias"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/tabel8field2"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@string/tabel8field2_hint"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:paddingTop="21dp"
                android:paddingBottom="11dp" />

            <TextView
                android:id="@+id/tabel8field3Judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabel8field3_alias"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/tabel8field3"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@string/tabel8field3_hint"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:paddingTop="21dp"
                android:paddingBottom="11dp" />

            <TextView
                android:id="@+id/tabel8field4Judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabel8field4_alias"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/tabel8field4"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@string/tabel8field4_hint"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:paddingTop="21dp"
                android:paddingBottom="11dp" />

            <TextView
                android:id="@+id/tabel8field5Judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabel8field5_alias"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/tabel8field5"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@string/tabel8field5_hint"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:paddingTop="21dp"
                android:paddingBottom="11dp" />

            <!-- Repeat the above pattern for other fields -->

            <Button
                android:id="@+id/btnSave"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/btnSave"
                android:textColor="@color/white" />

        </GridLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
