<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/background"
    tools:context=".tabel9.Tabel9UpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnBack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/tabel9_alias"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tabel9field1Judul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tabel9field1_alias"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/tabel9field1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/tabel9field2Judul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/tabel9field2_alias"
                    android:textSize="24sp" />


                <EditText
                    android:id="@+id/tabel9field2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:id="@+id/tabel9field3Judul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/tabel9field3_alias"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/tabel9field3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/tabel9field4Judul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/tabel9field4_alias"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/tabel9field4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/tabel9field5Judul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/tabel9field5_alias"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/tabel9field5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/btn_Save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/btnSave" />
            </GridLayout>


        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
